Fix partners logo align

--- a/src/css/partners.css
+++ b/src/css/partners.css
@@ -9,6 +9,9 @@
 
 .partner {
   min-height: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .partners__logos img {
